src/objects/Integration_Default_User__c.object
<CustomObject>
    <description>Used to capture the default users per country and product area. Used by the integration.</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>Should contain the country codes for all Astra Tech sub-sidiaries which use Salesforce.</description>
        <inlineHelpText>Should contain the country codes for all Astra Tech sub-sidiaries which use Salesforce.</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>CY</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>KZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Group_Exception__c</fullName>
        <description>Add customer group, when ownership should be overwritten based on Customer Group. Created to handle DEX-customers who has SE numbers but can be differentiated from Swedish customers by customer group</description>
        <inlineHelpText>Add customer group, when ownership should be overwritten based on Customer Group. Created to handle DEX-customers who has SE numbers but can be differentiated from Swedish customers by customer group</inlineHelpText>
        <label>Customer Group Exception</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Id_Failed_Person_Acc_t_Conversion_User__r.Email</formula>
        <label>Email: Failed Person Acc&apos;t Conversion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Failed_Person_Acc_t_Conversion_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID:Failed Person Acc&apos;t Conversion User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SSIS_Default_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_Failed_Person_Acc_t_Conversion_User__c</fullName>
        <formula>Id_Failed_Person_Acc_t_Conversion_User__r.FirstName &amp;&quot; &quot;&amp; Id_Failed_Person_Acc_t_Conversion_User__r.LastName</formula>
        <label>Name:Failed Person Acc&apos;t Conversion User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <label>Product Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_User_ID__c</fullName>
        <description>Used to store the user ID of the default user per country and product area.</description>
        <label>ID: Default User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xId_Failed_Person_Acc_t_Conversion_User__c</fullName>
        <description>Salesforce ID for person to receive notification about failed Person Account Conversion.</description>
        <label>xID:Failed Person Acc&apos;t Conversion User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xame_Failed_Person_Acc_t_Conversion_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person that will receive notification about failed person account converstion.</description>
        <inlineHelpText>Person that will receive notification about failed person account converstion.</inlineHelpText>
        <label>xName:Failed Person Acc&apos;t Conversion Usr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Default_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SSIS: Default User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SFDC_User_ID__c</columns>
        <columns>NAME</columns>
        <columns>Id_Failed_Person_Acc_t_Conversion_User__c</columns>
        <columns>Name_Failed_Person_Acc_t_Conversion_User__c</columns>
        <columns>Email__c</columns>
        <columns>Product_Area__c</columns>
        <columns>Country__c</columns>
        <columns>Customer_Group_Exception__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Default_Users</fullName>
        <columns>NAME</columns>
        <columns>SFDC_User_ID__c</columns>
        <columns>Id_Failed_Person_Acc_t_Conversion_User__c</columns>
        <columns>Name_Failed_Person_Acc_t_Conversion_User__c</columns>
        <columns>Email__c</columns>
        <columns>Customer_Group_Exception__c</columns>
        <columns>Country__c</columns>
        <columns>Product_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Default Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dental_Default_Users</fullName>
        <columns>NAME</columns>
        <columns>SFDC_User_ID__c</columns>
        <columns>Id_Failed_Person_Acc_t_Conversion_User__c</columns>
        <columns>Name_Failed_Person_Acc_t_Conversion_User__c</columns>
        <columns>Email__c</columns>
        <columns>Country__c</columns>
        <columns>Customer_Group_Exception__c</columns>
        <columns>Product_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Area__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </filters>
        <label>Dental Default Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>National_Admin_by_Product_Area_Country</fullName>
        <columns>NAME</columns>
        <columns>Product_Area__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>National Admin by Product Area &amp; Country</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name: Default User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSIS: Default Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>